[package]
name = "siffleux"
version = "0.1.0"
edition = "2024"

[dependencies]
quinn = "0.11.9"
tokio = { version = "1.52.3", features = ["full"] }
rcgen = "0.14.8"
rustls = "0.23.40"
tracing = "0.1.44"
thiserror = "2.0.18"
async-trait = "0.1.89"
bytes = "1.11.1"
tokio-util = "0.7.18"
tracing-subscriber = "0.3.23"
clap = { version = "4.6.1", features = ["derive"] }
getrandom = "0.4.2"
base64 = "0.22.1"
argon2 = "0.5.3"
sha2 = "0.11.0"
