[workspace.package]
version = "0.1.0"
authors = ["Djxy <samuel.m.lavoie@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/djxy/siffleux"

[workspace.dependencies]
rustls = "0.23.40"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"

[workspace]
members = [
    "siffleux",
    "siffleux-cli",
]
resolver = "3"
