[workspace.package]
version = "0.1.0"
authors = ["Djxy <samuel.m.lavoie@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/djxy/siffleux"

[workspace.dependencies]
getrandom = "0.4.2"
rustls = "0.23.40"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[workspace]
members = [
    "siffleux",
    "siffleux-cli"
]
resolver = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
