[package]
name = "siffleux-cli"
version.workspace = true
edition = "2024"

[dependencies]
rustls = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.23"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
siffleux = { version = "0.1.0", path = "../siffleux" }
