[package]
name = "siffleux"
version.workspace = true
edition = "2024"

[dependencies]
rustls = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
getrandom = { workspace = true }
rcgen = "0.14.8"
thiserror = "2.0.18"
async-trait = "0.1.89"
bytes = "1.11.1"
tokio-util = { version = "0.7.18", features = ["codec", "io"] }
sha2 = "0.11.0"
futures-util = { version = "0.3.32", features = ["sink"] }
quinn = "0.11.11"
parking_lot = "0.12.5"
uuid = { version = "1.23.4", features = ["v7"] }
serde = "1.0.228"
socket2 = "0.6.5"

[dev-dependencies]
tracing-subscriber = { workspace = true }
